# dinuc_shuf

./: Cargo.toml  README.md  pyproject.toml
docs/: dinuc_shuf.html
python/dinuc_shuf/: __init__.py  main.py
tests/: test.py  time.py
