[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "dinuc_shuf"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy >= 1.16.0"
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
# module-name = "dinuc_shuf._internal"